--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "playwright",
+  "name": "playwright-test-suite",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "LambdaTest",
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "description": "Sample project to run playwright tests using playwright runner on LambdaTest platform",
+  "scripts": {
+    "test": "npx playwright test --config=./playwright.config.js"
+  },
   "devDependencies": {
-    "@playwright/test": "^1.27.1"
+    "@playwright/test": "^1.20.2",
+    "playwright": "^1.20.2"
   }
 }
