--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@playwright/test": "^1.20.2",
     "axe-core": "^4.5.2",
     "playwright": "^1.20.2"
+  },
+  "dependencies": {
+    "@axe-core/playwright": "^4.5.2"
   }
 }
