--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@playwright/test": "^1.20.2",
     "axe-core": "^4.5.2",
+    "axe-html-reporter": "^2.2.3",
     "playwright": "^1.20.2"
   },
   "dependencies": {
